# uvo-search

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.admin-gui  Dockerfile.api  Dockerfile.gui  Dockerfile.mcp  Dockerfile.pipeline  Dockerfile.workers  README.md  docker-compose.yml  docker-stack-dev.yml  pyproject.toml  test_uvostat.py
.claude/agents/: data-pipeline.md  db-monitor.md  procurement-domain.md  search-tuner.md
.github/workflows/: ci.yml  deploy-dev.yml  docker-publish.yml
docker/: nginx-admin.conf  nginx.conf
docs/: api-v1.md  architecture.md  backend.md  data-pipeline.md  data-sources-research.md  frontend.md  nicegui-research.md  plan-vestnik-nkod.md  plan.md  reference.md  research.md
docs/architecture/: caching.md  ports-and-adapters-plan.md
docs/superpowers/plans/: 2026-04-03-nicegui-redesign.md  2026-04-03-uvo-search-phase1.md  2026-04-04-uvo-api-fastapi.md  2026-04-04-vue-admin-gui-frontend.md  2026-04-11-deduplication-ingestion-registry.md  2026-04-11-itms-api.md  2026-04-11-uvo-scraper.md  (+6 more)
scripts/: backfill_entity_stats.py  backfill_title_slug.py  clamp_bad_dates.py  diagnose_top_suppliers.py  embed_companies.py  enrich_itms_procurers.py  enrich_ted_awards.py  enrich_vestnik.py  issue_api_key.py  migrate_to_atlas_local.sh  preview_pass3_dedup.py  repair_crz_dates.py  strip_tab_icos.py
src/uvo-gui-react/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src/uvo-gui-vuejs/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/uvo_api/: __main__.py  _schema.py  app.py  auth.py  cache_invalidation.py  config.py  db.py  mcp_client.py  models.py  ratelimit.py  services.py  v1_errors.py
src/uvo_core/: __init__.py  cache.py  ports.py  testing.py
src/uvo_gui/: __main__.py  app.py  config.py  main.py  mcp_client.py
src/uvo_mcp/: __main__.py  cache.py  config.py  models.py  search_indexes.py  search_query.py  server.py
src/uvo_pipeline/: __main__.py  config.py  dedup.py  health.py  ingestion_log.py  locks.py  models.py  orchestrator.py  pubsub.py  redis_client.py  streams.py
src/uvo_workers/: __init__.py  crz.py  dedup.py  health.py  ingestor.py  itms.py  runner.py  ted.py  vestnik.py
tests/: conftest.py
tests/api/: test_analytics.py  test_app.py  test_cache_invalidation.py  test_concentration.py  test_config.py  test_contracts.py  test_dashboard.py  test_dashboard_ingestion.py  test_dashboard_phase3.py  test_firma.py  test_firma_extensions.py  test_graph.py  test_ingestion_log.py  test_mcp_client.py  test_procurers.py  test_suppliers.py  test_unified_search.py  test_v1_auth.py  test_v1_endpoints.py  test_worker_status.py
tests/core/: conftest.py  test_checkpoint_store_adapter.py  test_dashboard_builders.py  test_notice_repository_write.py  test_notice_stream_adapter.py  test_risk.py  test_scoring.py  test_value_filter.py
tests/e2e/: conftest.py  test_docker_compose.py  test_nicegui_browser.py  test_vue_admin_browser.py  test_vue_admin_gui.py
tests/gui/: conftest.py  layout_test_app.py  test_about_page.py  test_graph_page.py  test_gui_config.py  test_layout.py  test_mcp_client.py  test_procurers_page.py  test_search_box.py  test_search_page.py  test_suppliers_page.py
tests/mcp/: test_autocomplete.py  test_cache.py  test_config.py  test_golden_tool_shape.py  test_graph_tools.py  test_models.py  test_search_indexes.py  test_search_query.py  test_tools_graph.py  test_tools_procurements.py  test_tools_subjects.py
tests/pipeline/: conftest.py  test_cache.py  test_config.py  test_config_uvo.py  test_dedup.py  test_entity_stats.py  test_health.py  test_ingestion_log.py  test_locks.py  test_models.py  test_models_uvo.py  test_orchestrator.py  test_orchestrator_smoke.py  test_pubsub.py  test_streams.py  test_uvo_smoke.py
tests/workers/: test_crz_worker.py  test_ingestor_logging.py  test_runner.py  test_runner_logging.py
(+251 files in other folders)
