[project]
name = "uvo-search"
version = "0.1.0"
description = "Search and browse Slovak government procurement data via MCP server and NiceGUI frontend"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "nicegui>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvo_mcp", "src/uvo_gui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that call real external APIs",
]

[project.scripts]
uvo-mcp = "uvo_mcp.__main__:main"
uvo-gui = "uvo_gui.__main__:main"
