[project]
name = "uvo-search"
version = "0.1.0"
description = "Search and browse Slovak government procurement data via MCP server and NiceGUI frontend"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "nicegui>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.0.0",
    "fastapi[standard]>=0.115.0",
    "motor>=3.4",
    "neo4j>=5.0",
    "lxml>=5.0",
    "aiofiles>=23.0",
    "python-slugify>=8.0",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.8",
    "mongomock-motor>=0.0.21",
    "pytest-playwright>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uvo_mcp", "src/uvo_gui", "src/uvo_pipeline", "src/uvo_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests that call real external APIs",
    "e2e: end-to-end tests that require docker compose (deselect with '-m \"not e2e\"')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: line length enforced by formatter, not linter
# UP046: Generic[T] subclass syntax — PEP 695 style is Python 3.13+, keep 3.12 compat
ignore = ["E501", "UP046"]

[dependency-groups]
dev = [
    "mongomock-motor>=0.0.36",
    "nicegui>=3.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.22.0",
    "pytest-playwright>=0.5",
]

[project.scripts]
uvo-mcp = "uvo_mcp.__main__:main"
uvo-gui = "uvo_gui.__main__:main"
uvo-api = "uvo_api.__main__:main"
uvo-pipeline = "uvo_pipeline.__main__:main"
